Use Java-21 and upgrade base libraries.