@@ -1,9 +1,9 @@
 dependencies {
     // BndPomRepository (3.5.0) cannot handle ranges without upper limit
-    api 'org.jgrapes:org.jgrapes.core:[1.20.0,2)'
-    api 'org.jgrapes:org.jgrapes.io:[2.10.0,3)'
-    api 'org.jgrapes:org.jgrapes.http:[3.4.0,4)'
-    api 'org.jgrapes:org.jgrapes.util:[1.35.0,2)'
+    api 'org.jgrapes:org.jgrapes.core:[1.21.0,2)'
+    api 'org.jgrapes:org.jgrapes.util:[1.36.0,2)'
+    api 'org.jgrapes:org.jgrapes.io:[2.11.0,3)'
+    api 'org.jgrapes:org.jgrapes.http:[3.5.0,4)'
     api 'org.jdrupes.json:json:[2.3.1,2.4.0)'
     api 'org.freemarker:freemarker:[2.3.31,2.4)'
     api 'jakarta.mail:jakarta.mail-api:[2.1.3,3)'
@@ -48,17 +48,11 @@ task tsdoc(type: NodeTask, dependsOn: ':npmInstall') {
 
 configurations {
     markdownDoclet
-}
- 
-dependencies {
-    markdownDoclet "org.jdrupes.mdoclet:doclet:3.1.0"
-}
-
-configurations {
     javadocTaglets
 }
  
 dependencies {
+    markdownDoclet "org.jdrupes.mdoclet:doclet:4.2.0"
     javadocTaglets "org.jdrupes.taglets:plantuml-taglet:3.1.0"
 }
 
@@ -74,16 +68,14 @@ task javadocResources(type: Copy) {
 
 task apidocs(type: JavaExec) {
     // Does not work on JitPack, no /usr/bin/dot
-    enabled = JavaVersion.current() == JavaVersion.VERSION_17 && !isJitPackBuild
+    enabled = JavaVersion.current() == JavaVersion.VERSION_21 && !isJitPackBuild
     
     dependsOn javadocResources
     dependsOn classes
     dependsOn tsdoc
     inputs.file "${rootProject.rootDir}/overview.md"
-    inputs.file "${rootProject.rootDir}/misc/stylesheet.css"
+    inputs.file "${rootProject.rootDir}/misc/javadoc-overwrites.css"
 
-    jvmArgs = ['--add-exports=jdk.javadoc/jdk.javadoc.internal.tool=ALL-UNNAMED',
-        '--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED']
     classpath files(rootProject.subprojects
         .findAll {project -> project.pluginManager.hasPlugin('java-library')
             || project.pluginManager.hasPlugin('application') }
@@ -97,11 +89,20 @@ task apidocs(type: JavaExec) {
     ext.destinationDir = file("${rootProject.buildDir}/javadoc")
     outputs.dir(destinationDir)
     
-    main = 'jdk.javadoc.internal.tool.Main'
+    jvmArgs = ['--add-exports=jdk.compiler/com.sun.tools.doclint=ALL-UNNAMED',
+        '--add-exports=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED',
+        '--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED',
+        '--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED',
+        '--add-exports=jdk.javadoc/jdk.javadoc.internal.tool=ALL-UNNAMED',
+        '--add-exports=jdk.javadoc/jdk.javadoc.internal.doclets.toolkit=ALL-UNNAMED',
+        '--add-opens=jdk.javadoc/jdk.javadoc.internal.doclets.toolkit.resources.releases=ALL-UNNAMED',
+        '-Duser.language=en', '-Duser.region=US']
+    mainClass = 'jdk.javadoc.internal.tool.Main'
+    
     args = ['-doctitle', "JGrapes Web Console ${project.version}",
         '-use',
         '-linksource',
-        '-link', 'https://docs.oracle.com/en/java/javase/11/docs/api/',
+        '-link', 'https://docs.oracle.com/en/java/javase/21/docs/api/',
         '-link', 'https://mnlipp.github.io/jgrapes/latest-release/javadoc/',
         '-link', 'https://freemarker.apache.org/docs/api/',
         '--add-exports', 'jdk.javadoc/jdk.javadoc.internal.tool=ALL-UNNAMED',
@@ -119,7 +120,8 @@ task apidocs(type: JavaExec) {
         '-bottom', file("${rootProject.rootDir}/misc/javadoc.bottom.txt").text,
         '--allow-script-in-comments',
         '-Xdoclint:-html',
-        '--main-stylesheet', "${rootProject.rootDir}/misc/stylesheet.css",
+        '--add-stylesheet', "${rootProject.rootDir}/misc/javadoc-overwrites.css",
+        '--add-exports=jdk.javadoc/jdk.javadoc.internal.doclets.formats.html=ALL-UNNAMED',
         '-quiet'
         ]
 
